--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "openai": "^4.33.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
