--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@libsql/client": "^0.6.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "openai": "^4.33.1"
