--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A Discord bot that uses OpenAI's GPT-4 to respond",
   "main": "index.js",
+  "scripts": {
+  "test": "jest"
+  },
   "dependencies": {
     "@libsql/client": "^0.6.0",
     "discord.js": "^14.14.1",
@@ -10,6 +13,9 @@
     "openai": "^4.33.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.4.5"
   }
 }
